sPlash Compiler/tests/negative/N_example14.sp
max:Int (a: Int, b){
    if a > b {
        return a;
    }
    return b;
}
pi:Int = 3;